# github-org-scripts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  User Search.ipynb  admins.py  auditlog.py  block_user  check_CoC.py  client.py  close_pull_requests.py  close_pull_requests.yaml  code_search.py  contributing.py  enforce_2fa.py  get_PAT_owner  get_active_hooks.py  get_olson_tz.sh  get_org_info.py  hooks.py  lfs.py  manage_invitations.py  missing_2fa.py  old_repos.py  owner_actions_from_auditlog  postBuild  pyproject.toml  remove_member_from_org.py  repo-admins  repo-pr-stats.py  requirements.in  requirements.txt  runtime.txt  set_secrets_in_env.sh  sudo-all  team_update.py  (+1 more)
.devcontainer/: devcontainer.json
.jupyter/: jupyter_notebook_config.py
audit-log/: audit-log-export.js  hooks.py
binder/: README.md  postBuild  start
binder/conda/: README.md  notebook.yml
conda/: README.md  kernel.yml  notebook.yml
notebooks/: User Search.ipynb  UserSearchPy3.ipynb  us-conversion.py
tests/: test_get_org_info.py
